fix configuration ldap authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#LDAP
 spring.ldap.embedded.base-dn=dc=habuma,dc=com
 spring.ldap.embedded.port=8389
 
+#LDAP authenticated
+user.dn.pattern=uid={0},ou=people
+group.base=ou=groups
+group.filter=uniqueMember={0}
+ldif.path=classpath:test-server.ldif
